# ur10-move-coke_can

./: CMakeLists.txt  README  package.xml
include/plugins/: model_collision_plugin.hh
include/ur10/: collision.h  motion_control.h  operations_manager.h  scene.h  transform.h
launch/: demo.launch  demo.launch~  launch.launch~  ur10.launch
plugins/: model_collision_plugin.cc
src/: collision.cpp  main.cpp  motion_control.cpp  operations_manager.cpp  scene.cpp  transform.cpp
srv/: model_collision_bounding_box.srv  model_collision_bounding_box.srv~
worlds/: stair.world
