<?xml version="1.0"?>
<package>
  <name>ur10</name>
  <version>0.0.0</version>
  <description>The ur10 package</description>

  <maintainer email="elena@todo.todo">elena</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>gazebo_ros</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>gazebo_ros</run_depend>
  
  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
    <gazebo_ros gazebo_media_path="${prefix}" />    
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>

</package>